NetBSD Problem Report #43346

From bernd@arresum.veego.de  Mon May 24 07:20:55 2010
Return-Path: <bernd@arresum.veego.de>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 62E9F63B873
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 24 May 2010 07:20:55 +0000 (UTC)
Message-Id: <201005240720.o4O7KdOg009520@arresum.veego.de>
Date: Mon, 24 May 2010 09:20:39 +0200 (CEST)
From: Bernd Ernesti <pr201005@veego.de>
Reply-To: Bernd Ernesti <pr201005@veego.de>
To: gnats-bugs@gnats.NetBSD.org
Subject: WARNING: defaulted mmap() share type to MAP_PRIVATE for ftp and ssh connections
X-Send-Pr-Version: 3.95

>Number:         43346
>Category:       kern
>Synopsis:       WARNING: defaulted mmap() share type to MAP_PRIVATE for ftp and ssh connections
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon May 24 07:25:00 +0000 2010
>Closed-Date:    Thu Jun 03 12:53:03 +0000 2010
>Last-Modified:  Thu Jun 03 12:53:03 +0000 2010
>Originator:     Bernd Ernesti
>Release:        NetBSD 5.99.29
>Organization:

>Environment:
System: NetBSD 5.99.29 2010-05-25 06:00 UTC
Architecture: i386
Machine: i386
>Description:

	My syslog is filling up with the following messages while ssh
	or ftp are used to connect to remote sites:

WARNING: defaulted mmap() share type to MAP_PRIVATE (pid 19374 command ssh)

WARNING: defaulted mmap() share type to MAP_PRIVATE (pid 8870 command ftp)
WARNING: defaulted mmap() share type to MAP_PRIVATE (pid 8870 command ftp)
WARNING: defaulted mmap() share type to MAP_PRIVATE (pid 8870 command ftp)
WARNING: defaulted mmap() share type to MAP_PRIVATE (pid 8870 command ftp)
WARNING: defaulted mmap() share type to MAP_PRIVATE (pid 8870 command ftp)
WARNING: defaulted mmap() share type to MAP_PRIVATE (pid 8870 command ftp)
WARNING: defaulted mmap() share type to MAP_PRIVATE (pid 8870 command ftp)

	A ssh session only cause one line but ssh is producing 6 or 7
	lines for each session.

>How-To-Repeat:
	Use a kernel with DEBUG enabled and watch the syslog messages
	while you execute the following commands:
	* ssh
	ssh ftp.netbsd.org
	* ftp
	ftp ftp://ftp.netbsd.org/
>Fix:

>Release-Note:

>Audit-Trail:
From: Bernd Ernesti <veego@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43346 CVS commit: src/lib/libc/cdb
Date: Thu, 3 Jun 2010 12:40:52 +0000

 Module Name:	src
 Committed By:	veego
 Date:		Thu Jun  3 12:40:52 UTC 2010

 Modified Files:
 	src/lib/libc/cdb: cdbr.c

 Log Message:
 Use MAP_FILE|MAP_SHARED instead of MAP_FILE for the flags parameter of mmap(2).
 Patch is from martin.

 Solves my own PR kern/43346


 To generate a diff of this commit:
 cvs rdiff -u -r1.1 -r1.2 src/lib/libc/cdb/cdbr.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: veego@NetBSD.org
State-Changed-When: Thu, 03 Jun 2010 12:53:03 +0000
State-Changed-Why:
The bug is fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.