Use MAP_FILE|MAP_SHARED instead of MAP_FILE for the flags parameter of mmap(2). Patch is from martin.

Solves my own PR kern/43346